k8s/base/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: querido-diario
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
